--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+<meta charset="UTF-8">
+<style type="text/css">
+body{
+background-image：url（./mingtian.jpg）;
+background-size:100% 100%;
+height:100%
+}
+html{
+height:100%;
+}
+</style>
+</head>
 <body>
 hahahahaha
 </body>
