--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <style type="text/css">
 body{
-background-image: url（.mingtian.jpg）;
+background-image: url（./images/mingtian.jpg）;
 background-size:100% 100%;
 height:100%
 }
@@ -14,7 +14,7 @@ height:100%;
 </style>
 </head>
 <body>
-<img src="mingtian.jpg"/>
+
 hahahahaha
 </body>
 </html>
