--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
 <meta charset="UTF-8">
 <style type="text/css">
 body{
-background-image: url（./image/mingtian.jpg）;
-background-size:100% 100%;
-height:100%
-}
-html{
-height:100%;
-}
+background-image: url（./image/mingtian.jpg）;}
+
 </style>
 </head>
 <body>
