--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <style type="text/css">
 body{
-background-image: url(./image/mingtian.jpg);}
+background-image: url(./image/mingtian.jpg);
+ }
 </style>
 </head>
 <body>
